--- a/wp-content/themes/srijanalaya/less/mobile_custom.less
+++ b/wp-content/themes/srijanalaya/less/mobile_custom.less
@@ -114,7 +114,7 @@ a:hover {
     margin-left:2%;
     margin-top:2.5%;
     margin-bottom: 2.5%;
-    height:9%;
+    height: 60px;
     border-bottom: 1px solid #5a5a5a;
     overflow: hidden;
 }
@@ -199,7 +199,7 @@ a:hover {
     overflow: hidden;
 }
 .item {
-    height: 50vh !important;
+    height: 75vh !important;
 }
 img {
     //position: absolute;
@@ -289,6 +289,17 @@ display: inline-block !important;
         height: 50vh!important;
         width:100%;
         position: relative;
+        @media screen and (orientation: landscape){
+            height: 100vh !important;
+            width: 50%;
+            float: left;
+
+            a.btn {
+                position: absolute;
+                top: 200px;
+            }
+                                    
+        }
         .item-wrapper {
             h1{font-size: 2em!important; line-height: 2.5em;}
             h2{font-size: 1.5em!important;}
@@ -760,6 +771,9 @@ h2 {
             position: absolute;
             bottom: 0;
         }
+        .copyrite.office {
+            bottom: 24px;
+        }
 
     }
 }
@@ -837,6 +851,7 @@ h2 {
         right: -40px !important;
         padding-top: 96px !important;
         top: 0 !important;
+        overflow: scroll;
         padding: 10px 10px 0;
         transform: translateX(150px);
         transition: all 0.2s ease-in;
