--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -3105,7 +3105,7 @@ form .btn {
             .newsletter {
                 float: left;
                 width: 100%;
-                height:97px !important;
+                height:75px !important;
               //  margin-left: 0.5%;
               p {
                 font-size: 16px;
@@ -3120,7 +3120,7 @@ form .btn {
         .donate {
             float: left;
             width: 100%;
-            height: 97px !important;
+            height: 75px !important;
             margin-top:2px;
                 //margin-left:0.5%;
                 p { 
@@ -3138,7 +3138,9 @@ form .btn {
             bottom: 0;
             margin-bottom: 0 !important;
         }
-
+        .copyrite.office {
+            bottom: 21px;
+        }
     }
 }
 .newsletter {
@@ -3668,7 +3670,7 @@ p {
         padding: 10px 10px 0;
         transform: translateX(150px);
         transition: all 0.2s ease-in;
-        
+        overflow: scroll;
         .subs {
             border-bottom: 1px solid #5a5a5a;
 
@@ -4325,5 +4327,45 @@ p.category {
     .page-content {
         width: 92%;
         margin: 0 auto;
+    }
+}
+.page-news, .page-srijanalaya-artist {
+    @media screen and (orientation: landscape){
+        .content-grid { margin-left: 3%;}
+        .banner-content {padding-top: 120px!important}
+
+    }
+    
+}
+.post-type-archive-project {
+    @media screen and (orientation: landscape){
+        .banner-content {
+            margin-left: 0px !important;
+            padding-left: 70px !important;
+        }
+        #section-5 {
+            height: 63% !important;
+
+            .copyrite.office {
+                bottom: 18px;
+            }
+        }
+    }
+}
+.page-resources {
+    @media screen and (orientation: landscape){
+        .banner-content {
+            h2 {
+                padding-top: 40px !important;
+            }
+        }
+        .content-grid {
+            margin-left: 2% !important;
+        }
+    }
+}
+@media screen and (orientation: landscape){
+    .product-img {
+        margin-bottom: 30px;
     }
 }
